workouts no longer roll behind bottom nav bar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -119,7 +119,7 @@ body {
 		padding: 10px 125px;
 	}
 
-	.lastGroup {
+	.bottomPadding {
 		margin-bottom: 100px;
 	}
 
